# MultiwaySwitch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
code/: Makefile  client.c  config_c.txt  server.c
config/: client.ini  config_c.ini  server.ini
src/: .gitignore  client.cpp  config.cpp  config.h  server.c  server.cpp
